# sphereQL

./: .bindings-ignore.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  sphere_viz.html
.claude/: settings.local.json
.claude/agent-memory/readme-auditor/: MEMORY.md  project_benchmark_accuracy.md
.claude/agent-memory/spatial-physics-engineer/: MEMORY.md  user_sphereql_creator.md
.claude/agents/: rust-quality-enforcer.md  spatial-physics-engineer.md
.claude/hooks/: stop-verify.sh
.github/workflows/: bindings-drift.yml  ci.yml  crates-publish.yml  python-publish.yml
docs/: README.md  architecture.md  auto-tuning.md  benchmark-analysis.md  coordinate-system.md  empirical-findings.md  examples.md  performance.md  project-status.md  projections.md  quickstart-python.md  quickstart-rust.md  quickstart-wasm.md  search-precision-roadmap.md  testing.md  use-cases.md
examples/: category_enrichment.py
lingua-spherica/: demo.py  setup_source.py  source_bundle.b64
lingua-spherica/lingua_spherica/: __init__.py  coordinates.py  engine.py  types.py
prompts/: 03-benchmark.md  04-pypi-packaging.md  05-pinecone-backend.md  06-quickstart-example.md  cleanroom-rewrite  fix-03-perf-robustness.md  pyo3-01-scaffold.md  pyo3-06-validation.md
prompts/archive/: 01-python-bridge.md  02-viz-tool.md  07-projected-points-api.md  fix-01-security.md  fix-02-data-integrity.md  pyo3-02-core-types.md  pyo3-03-projection.md  pyo3-04-pipeline.md  pyo3-05-tests-and-stubs.md
scripts/check-drift/: Cargo.toml
scripts/check-drift/src/: main.rs
sphereql/: Cargo.toml
sphereql-core/: Cargo.toml  README.md
sphereql-core/benches/: core_benchmarks.rs
sphereql-core/src/: conversions.rs  distance.rs  error.rs  interpolation.rs  lib.rs  regions.rs  spatial.rs  types.rs
sphereql-corpus/: Cargo.toml  README.md
sphereql-corpus/src/: axes.rs  concept.rs  corpus.rs  embed.rs  lib.rs  stress_corpus.rs
sphereql-embed/: Cargo.toml  README.md
sphereql-embed/src/: category.rs  confidence.rs  config.rs  configured_projection.rs  corpus_features.rs  domain_groups.rs  feedback.rs  kernel_pca.rs  laplacian.rs  lib.rs  mapper.rs  meta_model.rs  navigator.rs  pipeline.rs  projection.rs  quality_metric.rs  query.rs  spatial_quality.rs  text_embedder.rs  tuner.rs  types.rs  util.rs
sphereql-embed/tools/: auto_classify.py  embeddings.json  embeddings_auto.json  generate_embeddings.py
sphereql-graphql/: Cargo.toml  README.md
sphereql-graphql/src/: category.rs  category_types.rs  context.rs  lib.rs  query.rs  subscription.rs  types.rs
sphereql-index/: Cargo.toml  README.md
sphereql-index/benches/: index_benchmarks.rs
sphereql-index/src/: cache.rs  composite.rs  item.rs  lib.rs  sector.rs  shell.rs
sphereql-layout/: Cargo.toml  README.md
sphereql-layout/src/: clustered.rs  force.rs  lib.rs  managed.rs  quality.rs  traits.rs  types.rs  uniform.rs
sphereql-lingua/: Cargo.toml
sphereql-lingua/examples/: e2e.rs
sphereql-lingua/src/: abstraction.rs  concept.rs  graph.rs  lib.rs  pipeline.rs  relation.rs  salience.rs  taxonomy.rs
sphereql-python/: Cargo.toml  README.md  pyproject.toml  sphereql.pyi.old
sphereql-python/examples/: README.md  category_enrichment.py  dataset.py  kernel_pca.py  lingua_e2e.py  metalearning.py  quickstart.py  vectordb_advanced.py
sphereql-python/python/sphereql/: __init__.py  __init__.pyi  sphereql.pyi
sphereql-python/src/: core_types.rs  lib.rs  lingua.rs  meta.rs  nav.rs  pipeline.rs  projection.rs  types.rs  vectordb.rs  viz.rs  viz_template.html
sphereql-python/tests/: test_pipeline.py  test_sphereql.py  test_vectordb.py  test_viz.py
sphereql-vectordb/: Cargo.toml  README.md
sphereql-vectordb/src/: bridge.rs  error.rs  lib.rs  memory.rs  pinecone.rs  qdrant.rs  redacted.rs  store.rs  types.rs
sphereql-vectordb/tests/: e2e_text_to_sphereql.rs
sphereql-wasm/: Cargo.toml  README.md
sphereql-wasm/examples/: README.md  index.html
sphereql-wasm/src/: lib.rs
sphereql/examples/: ai_knowledge_navigator.rs  auto_categorize.rs  auto_tune.rs  basic_positioning.rs  benchmark.rs  category_enrichment.rs  e2e_transformer.rs  full_e2e.rs  geospatial.rs  graphql_server.rs  meta_feedback.rs  meta_learn.rs  meta_warm_start.rs  semantic_search.rs  spatial_analysis.rs  word_embeddings.rs
sphereql/src/: lib.rs
temp/: README.md  corpus.rs  corpus_part1_physics_to_medicine.rs  corpus_part2_linguistics_to_astronomy.txt  corpus_part3_visual_arts_to_religion.txt  corpus_part4_new_categories.txt  navigator_example_README.md  navigator_example_part1_imports.txt  navigator_example_part2_corpus_a.txt  navigator_example_part4_main.txt  navigator_example_part5_spatial.txt
