[workspace]
members = [
    "sphereql-core",
    "sphereql-embed",
    "sphereql-index",
    "sphereql-layout",
    "sphereql-graphql",
    "sphereql-vectordb",
    "sphereql-wasm",
    "sphereql",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/bkahan/sphereQL"
