[workspace]
members = [
    "sphereql-core",
    "sphereql-embed",
    "sphereql-index",
    "sphereql-layout",
    "sphereql-graphql",
    "sphereql-vectordb",
    "sphereql-wasm",
    "sphereql-python",
    "sphereql-corpus",
    "sphereql",
    "scripts/check-drift",
    "sphereql-lingua",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.2.0-alpha"
license = "MIT"
repository = "https://github.com/bkahan/sphereQL"

[workspace.dependencies]
# Data parallelism for O(n²) loops (corpus features, layout quality,
# k-NN graph construction). Pinned at the workspace level so every
# crate gets the same major.
rayon = "1.10"
