[package]
name = "sphereql-embed"
description = "Vector embedding projection engine for sphereQL"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
sphereql-core = { version = "0.1.0-alpha", path = "../sphereql-core" }
sphereql-index = { version = "0.1.0-alpha", path = "../sphereql-index" }
sphereql-layout = { version = "0.1.0-alpha", path = "../sphereql-layout" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
