[package]
name = "sphereql-graphql"
description = "GraphQL integration for sphereQL spatial queries"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sphereql-core = { path = "../sphereql-core" }
sphereql-index = { path = "../sphereql-index" }
async-graphql = "6"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
