[package]
name = "sphereql-graphql"
description = "GraphQL integration for sphereQL spatial queries"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
sphereql-core = { version = "0.2.0-alpha", path = "../sphereql-core" }
sphereql-index = { version = "0.2.0-alpha", path = "../sphereql-index" }
sphereql-embed = { version = "0.2.0-alpha", path = "../sphereql-embed" }
async-graphql = "6"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
