[package]
name = "sphereql-index"
description = "Spatial indexing and queries for sphereQL"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sphereql-core = { version = "0.1.0-alpha", path = "../sphereql-core" }

[dev-dependencies]
proptest = "1"
approx = "0.5"
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "index_benchmarks"
harness = false
