[package]
name = "sphereql-index"
description = "Spatial indexing and queries for sphereQL"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
sphereql-core = { version = "0.2.0-alpha", path = "../sphereql-core" }
thiserror = "2"

[dev-dependencies]
proptest = "1"
approx = "0.5"
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "index_benchmarks"
harness = false
