[package]
name = "sphereql-layout"
description = "Layout engine for sphereQL spatial positioning"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
sphereql-core = { version = "0.1.0-alpha", path = "../sphereql-core" }
sphereql-index = { version = "0.1.0-alpha", path = "../sphereql-index" }
rayon = { workspace = true }

[dev-dependencies]
proptest = "1"
approx = "0.5"
rand = "0.8"
