[package]
name = "sphereql-python"
description = "Python bindings for the sphereQL pipeline via PyO3"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "sphereql"
crate-type = ["cdylib"]
doc = false

[features]
default = ["embed"]
core = ["dep:sphereql-core"]
index = ["core", "dep:sphereql-index"]
layout = ["index", "dep:sphereql-layout"]
embed = ["layout", "dep:sphereql-embed"]
graphql = ["index", "dep:sphereql-graphql"]
vectordb = ["embed", "dep:sphereql-vectordb", "dep:tokio", "dep:async-trait", "dep:pythonize"]
qdrant = ["vectordb", "sphereql-vectordb/qdrant"]
full = ["core", "index", "layout", "embed", "graphql", "vectordb"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
sphereql-core = { path = "../sphereql-core", optional = true }
sphereql-index = { path = "../sphereql-index", optional = true }
sphereql-layout = { path = "../sphereql-layout", optional = true }
sphereql-embed = { path = "../sphereql-embed", optional = true }
sphereql-graphql = { path = "../sphereql-graphql", optional = true }
sphereql-vectordb = { path = "../sphereql-vectordb", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
async-trait = { version = "0.1", optional = true }
pythonize = { version = "0.28", optional = true }
serde_json = "1"
