[package]
name = "sphereql-python"
description = "Python bindings for the sphereQL pipeline via PyO3"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[lib]
name = "sphereql"
# `rlib` is needed so the `gen-stubs` bin can import the crate's
# `stub_info()` function. `cdylib` is what maturin links for Python.
crate-type = ["cdylib", "rlib"]
doc = false

[[bin]]
name = "gen-stubs"
path = "src/bin/gen_stubs.rs"
# Only built when explicitly requested; it requires the default
# features but must not be built with `extension-module` (which tells
# the linker Python provides libpython at load time — true for the
# cdylib, false for a standalone native binary).
required-features = ["embed"]

[features]
# `extension-module` tells pyo3 to skip linking libpython — correct for the
# cdylib that Python loads at runtime, but it breaks `cargo test` binaries
# (which need libpython). maturin enables it via pyo3/extension-module in
# pyproject.toml; CI's `cargo test --all-features` leaves it off and links
# libpython normally.
default = ["embed"]
extension-module = ["pyo3/extension-module"]
core = ["dep:sphereql-core"]
index = ["core", "dep:sphereql-index"]
layout = ["index", "dep:sphereql-layout"]
embed = ["layout", "dep:sphereql-embed"]
graphql = ["index", "dep:sphereql-graphql"]
vectordb = ["embed", "dep:sphereql-vectordb", "dep:tokio", "dep:async-trait"]
pinecone = ["vectordb", "sphereql-vectordb/pinecone"]
qdrant = ["vectordb", "sphereql-vectordb/qdrant"]
full = ["core", "index", "layout", "embed", "graphql", "vectordb"]

[dependencies]
pyo3 = { version = "0.28", features = ["multiple-pymethods"] }
numpy = "0.28"
pyo3-stub-gen = "0.22"
sphereql-core = { path = "../sphereql-core", optional = true }
sphereql-index = { path = "../sphereql-index", optional = true }
sphereql-layout = { path = "../sphereql-layout", optional = true }
sphereql-embed = { path = "../sphereql-embed", optional = true }
sphereql-graphql = { path = "../sphereql-graphql", optional = true }
sphereql-vectordb = { path = "../sphereql-vectordb", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
async-trait = { version = "0.1", optional = true }
pythonize = "0.28"
serde_json = "1"
