[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "sphereql"
version = "0.2.0a0"
description = "Spherical coordinate knowledge representation — fast semantic search, visualization, and analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ben Kahan", email = "benkahan1@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
keywords = ["embeddings", "semantic-search", "vector-database", "spherical", "pca", "visualization"]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.7"]

[project.urls]
Repository = "https://github.com/bkahan/sphereQL"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
features = ["extension-module", "core", "embed", "vectordb"]
python-source = "python"
module-name = "sphereql"
