[package]
name = "sphereql-vectordb"
description = "Vector database connectors for sphereQL"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
pinecone = ["dep:reqwest", "dep:futures"]
qdrant = ["dep:qdrant-client", "dep:sha2", "dep:futures"]

[dependencies]
sphereql-core = { version = "0.1.0-alpha", path = "../sphereql-core" }
sphereql-embed = { version = "0.1.0-alpha", path = "../sphereql-embed" }

async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

qdrant-client = { version = "1.12", optional = true }
sha2 = { version = "0.10", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
# Only used by the pinecone / qdrant features for bounded-concurrency
# set_payload. Pulling in just the `futures-util` fragments we need
# (StreamExt's `buffer_unordered`) keeps the default build lean.
futures = { version = "0.3", optional = true, default-features = false, features = ["std", "async-await"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
approx = "0.5"
