[package]
name = "sphereql-wasm"
description = "WebAssembly bindings for the sphereql-embed pipeline"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sphereql-core = { path = "../sphereql-core" }
sphereql-index = { path = "../sphereql-index" }
sphereql-embed = { path = "../sphereql-embed" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
