[package]
name = "sphereql-wasm"
description = "WebAssembly bindings for the sphereql-embed pipeline"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sphereql-core = { path = "../sphereql-core" }
sphereql-index = { path = "../sphereql-index" }
sphereql-embed = { path = "../sphereql-embed" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
# `tsify` + `serde-wasm-bindgen` give the WASM surface typed TypeScript
# interfaces for every return shape instead of opaque JSON `string`s.
# The `js` feature routes values through `serde-wasm-bindgen` for a
# direct JS-object handoff (no JSON round-trip).
tsify = { version = "0.5", default-features = false, features = ["js"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
