[package]
name = "sphereql"
description = "Production-grade spherical coordinate operations library with GraphQL integration"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["core"]
core = ["dep:sphereql-core"]
index = ["core", "dep:sphereql-index"]
layout = ["index", "dep:sphereql-layout"]
embed = ["layout", "dep:sphereql-embed"]
graphql = ["index", "dep:sphereql-graphql"]
vectordb = ["embed", "dep:sphereql-vectordb"]
pinecone = ["vectordb", "sphereql-vectordb/pinecone"]
full = ["core", "index", "layout", "embed", "graphql", "vectordb"]

[dependencies]
sphereql-core = { path = "../sphereql-core", optional = true }
sphereql-index = { path = "../sphereql-index", optional = true }
sphereql-layout = { path = "../sphereql-layout", optional = true }
sphereql-embed = { path = "../sphereql-embed", optional = true }
sphereql-graphql = { path = "../sphereql-graphql", optional = true }
sphereql-vectordb = { path = "../sphereql-vectordb", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"

[[example]]
name = "basic_positioning"
required-features = ["core"]

[[example]]
name = "geospatial"
required-features = ["index"]

[[example]]
name = "graphql_server"
required-features = ["full"]

[[example]]
name = "word_embeddings"
required-features = ["embed"]

[[example]]
name = "semantic_search"
required-features = ["embed"]

[[example]]
name = "e2e_transformer"
required-features = ["embed"]

[[example]]
name = "auto_categorize"
required-features = ["embed"]

[[example]]
name = "benchmark"
required-features = ["full"]
