[package]
name = "sphereql"
description = "Project high-dimensional embeddings onto a 3D sphere for semantic search, category enrichment, and visualization"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[features]
default = ["core"]
core = ["dep:sphereql-core"]
index = ["core", "dep:sphereql-index"]
layout = ["index", "dep:sphereql-layout"]
embed = ["layout", "dep:sphereql-embed"]
graphql = ["index", "dep:sphereql-graphql"]
vectordb = ["embed", "dep:sphereql-vectordb"]
pinecone = ["vectordb", "sphereql-vectordb/pinecone"]
full = ["core", "index", "layout", "embed", "graphql", "vectordb"]

[dependencies]
sphereql-core = { version = "0.1.0-alpha", path = "../sphereql-core", optional = true }
sphereql-index = { version = "0.1.0-alpha", path = "../sphereql-index", optional = true }
sphereql-layout = { version = "0.1.0-alpha", path = "../sphereql-layout", optional = true }
sphereql-embed = { version = "0.1.0-alpha", path = "../sphereql-embed", optional = true }
sphereql-graphql = { version = "0.1.0-alpha", path = "../sphereql-graphql", optional = true }
sphereql-vectordb = { version = "0.1.0-alpha", path = "../sphereql-vectordb", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
sphereql-corpus = { path = "../sphereql-corpus" }

[[example]]
name = "basic_positioning"
required-features = ["core"]

[[example]]
name = "geospatial"
required-features = ["index"]

[[example]]
name = "graphql_server"
required-features = ["full"]

[[example]]
name = "word_embeddings"
required-features = ["embed"]

[[example]]
name = "semantic_search"
required-features = ["embed"]

[[example]]
name = "e2e_transformer"
required-features = ["embed"]

[[example]]
name = "auto_categorize"
required-features = ["embed"]

[[example]]
name = "benchmark"
required-features = ["full"]

[[example]]
name = "category_enrichment"
required-features = ["embed"]

[[example]]
name = "ai_knowledge_navigator"
required-features = ["embed"]

[[example]]
name = "spatial_analysis"
required-features = ["embed"]

[[example]]
name = "auto_tune"
required-features = ["embed"]
