[package]
name = "check-drift"
description = "CI drift check: ensures sphereql-embed/layout public APIs have Python or WASM bindings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "check-drift"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
walkdir = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
